flux/infrastructure/media/spotweb/statefulset.yaml
# Auto-split from cluster files
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: media
  labels:
    app: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
      - name: mariadb
        image: mariadb:11
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        securityContext:
          capabilities:
            drop:
            - ALL
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
