flux/infrastructure/media/spotweb/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: media
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: spotweb
  namespace: media
  labels:
    app: spotweb
spec:
  selector:
    app: spotweb
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
