flux/infrastructure/media/spotweb/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotweb
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-sso-admin-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - spotweb.becklab.cloud
    secretName: spotweb-tls
  rules:
  - host: spotweb.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotweb
            port:
              number: 80
